stabilization of latest features